Quick cleanup